[package]
name = "tokio-take-seek"
version = "0.1.0"
edition = "2021"
description = "Offers a wrapper to tokio::io::Take that offers a tokio::io::AsyncSeek implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/OSSystems/tokio-take-seek"

[dependencies]
pin-project-lite = "0.2"
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
tempfile = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
